--- a/installer/resources/batch/files/batch_docker/dockerfile
+++ b/installer/resources/batch/files/batch_docker/dockerfile
@@ -3,7 +3,7 @@ MAINTAINER pacman-rule-execution-engine
 RUN \
     mkdir -p /aws && \
     apk -Uuv add groff less python py-pip && \
-    pip install awscli && \
+    pip install awscli --trusted-host pypi.org --trusted-host files.pythonhosted.org && \
     apk --purge -v del py-pip && \
     rm /var/cache/apk/*
 
