--- a/webapp/package.json
+++ b/webapp/package.json
@@ -16,70 +16,70 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^8.1.0",
-    "@angular/cdk": "^8.0.2",
-    "@angular/common": "^8.1.0",
-    "@angular/compiler": "^8.1.0",
-    "@angular/core": "^8.1.0",
-    "@angular/forms": "^8.1.0",
-    "@angular/http": "^7.2.15",
-    "@angular/material": "^8.0.2",
-    "@angular/platform-browser": "^8.1.0",
-    "@angular/platform-browser-dynamic": "^8.1.0",
-    "@angular/platform-server": "^8.1.0",
-    "@angular/router": "^8.1.0",
-    "@types/lodash": "^4.14.135",
-    "ag-grid": "^18.1.2",
-    "ag-grid-angular": "^21.0.1",
-    "angular-font-awesome": "^3.1.2",
-    "angular-in-memory-web-api": "^0.8.0",
+    "@angular/animations": "^4.4.7",
+    "@angular/cdk": "^2.0.0-beta.12",
+    "@angular/common": "^4.4.7",
+    "@angular/compiler": "^4.4.7",
+    "@angular/core": "^4.4.7",
+    "@angular/forms": "^4.4.7",
+    "@angular/http": "^4.4.7",
+    "@angular/material": "^2.0.0-beta.12",
+    "@angular/platform-browser": "^4.4.7",
+    "@angular/platform-browser-dynamic": "^4.4.7",
+    "@angular/platform-server": "^4.4.7",
+    "@angular/router": "^4.4.7",
+    "@types/lodash": "^4.14.112",
+    "ag-grid": "^16.0.1",
+    "ag-grid-angular": "^16.0.0",
+    "angular-font-awesome": "^2.0.3",
+    "angular-in-memory-web-api": "^0.5.0",
     "blocking-proxy": "^1.0.1",
     "bower": "^1.8.8",
-    "core-js": "^3.1.4",
-    "d3": "^5.9.7",
+    "core-js": "^2.4.1",
+    "d3": "^4.11.0",
     "font-awesome": "^4.7.0",
     "html2canvas": "^1.0.0-alpha.12",
-    "lodash": "^4.17.11",
-    "moment": "^2.24.0",
-    "ng2-datepicker": "~3.1.1",
-    "ng2-select": "^2.0.0",
+    "lodash": "^4.17.4",
+    "moment": "^2.21.0",
+    "ng2-datepicker": "~2.1.7",
+    "ng2-select": "^1.2.0",
     "ngx-highlight": "0.0.3",
-    "ngx-infinite-scroll": "^7.2.0",
-    "rxjs": "^6.5.2",
-    "zone.js": "^0.9.1"
+    "ngx-infinite-scroll": "^0.8.3",
+    "rxjs": "^5.4.2",
+    "zone.js": "^0.8.14"
   },
   "devDependencies": {
-    "@angular/cli": "8.1.0",
-    "@angular/compiler-cli": "^8.1.0",
-    "@angular/language-service": "^8.1.0",
-    "@types/d3": "^5.7.2",
-    "@types/d3-array": "2.0.0",
-    "@types/d3-axis": "1.0.12",
-    "@types/d3-scale": "2.1.1",
-    "@types/d3-selection": "1.4.1",
-    "@types/d3-shape": "1.3.1",
-    "@types/jasmine": "~3.3.13",
-    "@types/jasminewd2": "~2.0.6",
-    "@types/node": "^12.0.12",
+    "@angular/cli": "1.6.8",
+    "@angular/compiler-cli": "^4.4.7",
+    "@angular/language-service": "^4.2.4",
+    "@types/d3": "^4.10.1",
+    "@types/d3-array": "1.0.5",
+    "@types/d3-axis": "1.0.5",
+    "@types/d3-scale": "1.0.4",
+    "@types/d3-selection": "1.0.5",
+    "@types/d3-shape": "1.0.5",
+    "@types/jasmine": "~2.5.53",
+    "@types/jasminewd2": "~2.0.2",
+    "@types/node": "^6.0.114",
     "adal-angular": "^1.0.17",
-    "codelyzer": "~5.1.0",
+    "codelyzer": "~3.2.0",
     "crypto-js": "^3.1.9-1",
-    "http-status-codes": "^1.3.2",
-    "jasmine-console-reporter": "^3.1.0",
-    "jasmine-core": "~3.4.0",
+    "http-status-codes": "^1.3.0",
+    "jasmine-console-reporter": "^3.0.2",
+    "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "^4.2.1",
-    "karma": "~4.1.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-cli": "~2.0.0",
-    "karma-coverage-istanbul-reporter": "^2.0.5",
-    "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.2",
-    "protractor": "~5.4.2",
+    "karma": "~1.7.0",
+    "karma-chrome-launcher": "~2.1.1",
+    "karma-cli": "~1.0.1",
+    "karma-coverage-istanbul-reporter": "^1.2.1",
+    "karma-jasmine": "~1.1.0",
+    "karma-jasmine-html-reporter": "^0.2.2",
+    "protractor": "~5.1.2",
     "protractor-jasmine2-html-reporter": "0.0.7",
-    "replace-in-file": "^4.1.1",
-    "source-map-explorer": "^2.0.1",
-    "ts-node": "~8.3.0",
-    "tslint": "~5.18.0",
-    "typescript": "^3.5.2"
+    "replace-in-file": "^3.4.2",
+    "source-map-explorer": "^1.6.0",
+    "ts-node": "~3.2.0",
+    "tslint": "~5.7.0",
+    "typescript": "^2.3.4"
   }
 }
